@@ -72,3 +72,4 @@ Thumbs.db
 *.exe
 android/google-services.json
 deployToJW78.sh
+currentWork.txt
