@@ -14,6 +14,8 @@ void RightGroupObject::fromJSON(QJsonObject &o)
     setAutomatic(o[tableFields.automatic].toString() == "t");
     setaccess_code(o[tableFields.access_code].toString());
     setcreater_id(o[tableFields.creater_id].toString());
+    setrequest_allowed(o[tableFields.request_allowed].toString() == "t");
+    setvisible_for_non_members(o[tableFields.visible_for_non_members].toString() == "t");
 }
 
 void RightGroupObject::assign(const RightGroupObject &other)
@@ -23,4 +25,6 @@ void RightGroupObject::assign(const RightGroupObject &other)
     setAutomatic(other.automatic());
     setaccess_code(other.access_code());
     setcreater_id(other.creater_id());
+    setrequest_allowed(other.request_allowed());
+    setvisible_for_non_members(other.visible_for_non_members());
 }
